// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Feed cards snapshots > book card matches snapshots 1`] = `
<DocumentFragment>
  <article
    class="_card_9f5b00"
  >
    <img
      alt="Dune"
      class="_image_9f5b00"
      src="https://picsum.photos/seed/dune/600/300"
    />
    <h3
      class="_title_9f5b00"
    >
      Dune
    </h3>
    <p>
      Frank Herbert
    </p>
    <div
      class="_actions_9f5b00"
    >
      <button
        aria-label="community.feed.cta.propose_swap"
        class="_primaryButton_9f5b00"
      >
        community.feed.cta.propose_swap
      </button>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Feed cards snapshots > book card matches snapshots 2`] = `
<DocumentFragment>
  <article
    class="_card_9f5b00"
  >
    <img
      alt="Dune"
      class="_image_9f5b00"
      src="https://picsum.photos/seed/dune/600/300"
    />
    <h3
      class="_title_9f5b00"
    >
      Dune
    </h3>
    <p>
      Frank Herbert
    </p>
    <div
      class="_actions_9f5b00"
    >
      <button
        aria-label="community.feed.cta.propose_swap"
        class="_primaryButton_9f5b00"
      >
        community.feed.cta.propose_swap
      </button>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Feed cards snapshots > event card matches snapshots 1`] = `
<DocumentFragment>
  <article
    class="_card_9f5b00"
  >
    <img
      alt="Book Fair"
      class="_image_9f5b00"
      src="https://picsum.photos/seed/e/600/300"
    />
    <h3
      class="_title_9f5b00"
    >
      Book Fair
    </h3>
    <p>
      Casita Centro
    </p>
    <div
      class="_actions_9f5b00"
    >
      <button
        aria-label="community.feed.cta.go"
        class="_primaryButton_9f5b00"
      >
        community.feed.cta.go
      </button>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Feed cards snapshots > event card matches snapshots 2`] = `
<DocumentFragment>
  <article
    class="_card_9f5b00"
  >
    <img
      alt="Book Fair"
      class="_image_9f5b00"
      src="https://picsum.photos/seed/e/600/300"
    />
    <h3
      class="_title_9f5b00"
    >
      Book Fair
    </h3>
    <p>
      Casita Centro
    </p>
    <div
      class="_actions_9f5b00"
    >
      <button
        aria-label="community.feed.cta.go"
        class="_primaryButton_9f5b00"
      >
        community.feed.cta.go
      </button>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Feed cards snapshots > house card matches snapshots 1`] = `
<DocumentFragment>
  <article
    class="_card_9f5b00"
  >
    <img
      alt="Casita Norte"
      class="_image_9f5b00"
      src="https://picsum.photos/seed/h/600/300"
    />
    <h3
      class="_title_9f5b00"
    >
      Casita Norte
    </h3>
    <p>
      community.feed.house.distance
    </p>
    <div
      class="_actions_9f5b00"
    >
      <button
        aria-label="community.feed.cta.open_map"
        class="_primaryButton_9f5b00"
      >
        community.feed.cta.open_map
      </button>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Feed cards snapshots > house card matches snapshots 2`] = `
<DocumentFragment>
  <article
    class="_card_9f5b00"
  >
    <img
      alt="Casita Norte"
      class="_image_9f5b00"
      src="https://picsum.photos/seed/h/600/300"
    />
    <h3
      class="_title_9f5b00"
    >
      Casita Norte
    </h3>
    <p>
      community.feed.house.distance
    </p>
    <div
      class="_actions_9f5b00"
    >
      <button
        aria-label="community.feed.cta.open_map"
        class="_primaryButton_9f5b00"
      >
        community.feed.cta.open_map
      </button>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Feed cards snapshots > person card matches snapshots 1`] = `
<DocumentFragment>
  <article
    class="_card_9f5b00"
  >
    <img
      alt="Carlos"
      class="_avatar_9f5b00"
      src="https://i.pravatar.cc/300?u=p"
    />
    <h3
      class="_title_9f5b00"
    >
      Carlos
    </h3>
    <p>
      community.feed.person.match
    </p>
    <div
      class="_actions_9f5b00"
    >
      <button
        aria-label="community.feed.cta.message"
        class="_primaryButton_9f5b00"
      >
        community.feed.cta.message
      </button>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Feed cards snapshots > person card matches snapshots 2`] = `
<DocumentFragment>
  <article
    class="_card_9f5b00"
  >
    <img
      alt="Carlos"
      class="_avatar_9f5b00"
      src="https://i.pravatar.cc/300?u=p"
    />
    <h3
      class="_title_9f5b00"
    >
      Carlos
    </h3>
    <p>
      community.feed.person.match
    </p>
    <div
      class="_actions_9f5b00"
    >
      <button
        aria-label="community.feed.cta.message"
        class="_primaryButton_9f5b00"
      >
        community.feed.cta.message
      </button>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Feed cards snapshots > review card matches snapshots 1`] = `
<DocumentFragment>
  <article
    class="_card_9f5b00"
  >
    <img
      alt="Dune"
      class="_image_9f5b00"
      src="https://picsum.photos/seed/r/600/300"
    />
    <h3
      class="_title_9f5b00"
    >
      Maria
    </h3>
    <p>
      Great book
    </p>
    <div
      class="_actions_9f5b00"
    >
      <button
        aria-label="community.feed.cta.helpful"
        class="_primaryButton_9f5b00"
      >
        community.feed.cta.helpful
      </button>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Feed cards snapshots > review card matches snapshots 2`] = `
<DocumentFragment>
  <article
    class="_card_9f5b00"
  >
    <img
      alt="Dune"
      class="_image_9f5b00"
      src="https://picsum.photos/seed/r/600/300"
    />
    <h3
      class="_title_9f5b00"
    >
      Maria
    </h3>
    <p>
      Great book
    </p>
    <div
      class="_actions_9f5b00"
    >
      <button
        aria-label="community.feed.cta.helpful"
        class="_primaryButton_9f5b00"
      >
        community.feed.cta.helpful
      </button>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Feed cards snapshots > sale card matches snapshots 1`] = `
<DocumentFragment>
  <article
    class="_card_9f5b00"
  >
    <img
      alt="Foundation"
      class="_image_9f5b00"
      src="https://picsum.photos/seed/sa/600/300"
    />
    <h3
      class="_title_9f5b00"
    >
      Foundation
    </h3>
    <p>
      community.feed.sale.price
    </p>
    <div
      class="_actions_9f5b00"
    >
      <button
        aria-label="community.feed.cta.buy"
        class="_primaryButton_9f5b00"
      >
        community.feed.cta.buy
      </button>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Feed cards snapshots > sale card matches snapshots 2`] = `
<DocumentFragment>
  <article
    class="_card_9f5b00"
  >
    <img
      alt="Foundation"
      class="_image_9f5b00"
      src="https://picsum.photos/seed/sa/600/300"
    />
    <h3
      class="_title_9f5b00"
    >
      Foundation
    </h3>
    <p>
      community.feed.sale.price
    </p>
    <div
      class="_actions_9f5b00"
    >
      <button
        aria-label="community.feed.cta.buy"
        class="_primaryButton_9f5b00"
      >
        community.feed.cta.buy
      </button>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Feed cards snapshots > seeking card matches snapshots 1`] = `
<DocumentFragment>
  <article
    class="_card_9f5b00"
  >
    <img
      alt="Sapiens"
      class="_image_9f5b00"
      src="https://picsum.photos/seed/se/600/300"
    />
    <h3
      class="_title_9f5b00"
    >
      Luis
    </h3>
    <p>
      community.feed.seeking.description
    </p>
    <div
      class="_actions_9f5b00"
    >
      <button
        aria-label="community.feed.cta.offer_copy"
        class="_primaryButton_9f5b00"
      >
        community.feed.cta.offer_copy
      </button>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Feed cards snapshots > seeking card matches snapshots 2`] = `
<DocumentFragment>
  <article
    class="_card_9f5b00"
  >
    <img
      alt="Sapiens"
      class="_image_9f5b00"
      src="https://picsum.photos/seed/se/600/300"
    />
    <h3
      class="_title_9f5b00"
    >
      Luis
    </h3>
    <p>
      community.feed.seeking.description
    </p>
    <div
      class="_actions_9f5b00"
    >
      <button
        aria-label="community.feed.cta.offer_copy"
        class="_primaryButton_9f5b00"
      >
        community.feed.cta.offer_copy
      </button>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Feed cards snapshots > swap card matches snapshots 1`] = `
<DocumentFragment>
  <article
    class="_card_9f5b00"
  >
    <div
      class="_swapImages_9f5b00"
    >
      <img
        alt="1984"
        src="https://picsum.photos/seed/1984/300/200"
      />
      <img
        alt="The Hobbit"
        src="https://picsum.photos/seed/The Hobbit/300/200"
      />
    </div>
    <h3
      class="_title_9f5b00"
    >
      Ana
    </h3>
    <p>
      Ana community.feed.swap.wants
    </p>
    <div
      class="_actions_9f5b00"
    >
      <button
        aria-label="community.feed.cta.accept"
        class="_primaryButton_9f5b00"
      >
        community.feed.cta.accept
      </button>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Feed cards snapshots > swap card matches snapshots 2`] = `
<DocumentFragment>
  <article
    class="_card_9f5b00"
  >
    <div
      class="_swapImages_9f5b00"
    >
      <img
        alt="1984"
        src="https://picsum.photos/seed/1984/300/200"
      />
      <img
        alt="The Hobbit"
        src="https://picsum.photos/seed/The Hobbit/300/200"
      />
    </div>
    <h3
      class="_title_9f5b00"
    >
      Ana
    </h3>
    <p>
      Ana community.feed.swap.wants
    </p>
    <div
      class="_actions_9f5b00"
    >
      <button
        aria-label="community.feed.cta.accept"
        class="_primaryButton_9f5b00"
      >
        community.feed.cta.accept
      </button>
    </div>
  </article>
</DocumentFragment>
`;
